--- a/content-client/package.json
+++ b/content-client/package.json
@@ -13,6 +13,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "typed-rest-client": "^1.7.3",
     "typescript": "^3.7.5"
   },
   "scripts": {
