--- a/Kan/Kan.csproj
+++ b/Kan/Kan.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Content.Api\Content.Api.csproj" />
+      <ProjectReference Include="..\Extensions\Extensions.csproj" />
     </ItemGroup>
 
     <ItemGroup>
