--- a/Content/Content.csproj
+++ b/Content/Content.csproj
@@ -9,6 +9,7 @@
     <ProjectReference Include="..\Content.Api\Content.Api.csproj" />
     <ProjectReference Include="..\Kan\Kan.csproj" />
     <ProjectReference Include="..\Mako\Mako.csproj" />
+    <ProjectReference Include="..\Ynet\Ynet.csproj" />
   </ItemGroup>
 
   <ItemGroup>
