--- a/Walla/Walla.csproj
+++ b/Walla/Walla.csproj
@@ -4,4 +4,9 @@
         <TargetFramework>netstandard2.1</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Content.Api\Content.Api.csproj" />
+      <ProjectReference Include="..\Extensions\Extensions.csproj" />
+    </ItemGroup>
+
 </Project>
