Integrated Walla in system

--- a/Content/Content.csproj
+++ b/Content/Content.csproj
@@ -10,6 +10,7 @@
     <ProjectReference Include="..\Content.Api\Content.Api.csproj" />
     <ProjectReference Include="..\Kan\Kan.csproj" />
     <ProjectReference Include="..\Mako\Mako.csproj" />
+    <ProjectReference Include="..\Walla\Walla.csproj" />
     <ProjectReference Include="..\Ynet\Ynet.csproj" />
   </ItemGroup>
 
