--- a/Content/Content.csproj
+++ b/Content/Content.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Calcalist\Calcalist.csproj" />
     <ProjectReference Include="..\Content.Api\Content.Api.csproj" />
+    <ProjectReference Include="..\Haaretz\Haaretz.csproj" />
     <ProjectReference Include="..\Kan\Kan.csproj" />
     <ProjectReference Include="..\Mako\Mako.csproj" />
     <ProjectReference Include="..\Walla\Walla.csproj" />
