--- a/N0404/N0404.csproj
+++ b/N0404/N0404.csproj
@@ -5,4 +5,9 @@
         <LangVersion>latest</LangVersion>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Content.Api\Content.Api.csproj" />
+      <ProjectReference Include="..\Extensions\Extensions.csproj" />
+    </ItemGroup>
+
 </Project>
