--- a/Content/Content.csproj
+++ b/Content/Content.csproj
@@ -11,6 +11,7 @@
     <ProjectReference Include="..\Haaretz\Haaretz.csproj" />
     <ProjectReference Include="..\Kan\Kan.csproj" />
     <ProjectReference Include="..\Mako\Mako.csproj" />
+    <ProjectReference Include="..\TheMarker\TheMarker.csproj" />
     <ProjectReference Include="..\Walla\Walla.csproj" />
     <ProjectReference Include="..\Ynet\Ynet.csproj" />
   </ItemGroup>
