INewsDatabase (InMemory implementation too!)

--- a/Content/appsettings.Development.json
+++ b/Content/appsettings.Development.json
@@ -1,5 +1,8 @@
 {
   "DatabaseSettings": {
+    "UseInMemoryDatabase": true
+  },
+  "MongoSettings": {
     "ConnectionString": "mongodb://localhost:27017",
     "Database": "ContentDb",
     "Collection": "News"
