--- a/Content/appsettings.Development.json
+++ b/Content/appsettings.Development.json
@@ -7,6 +7,9 @@
     "Database": "ContentDb",
     "Collection": "News"
   },
+  "NewsSettings": {
+    "NewsUpdateSecondsInterval": 60
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
