Fixed Mongo nullables bug

--- a/Content.Api/Content.Api.csproj
+++ b/Content.Api/Content.Api.csproj
@@ -5,4 +5,8 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Bson" Version="2.10.3" />
+  </ItemGroup>
+
 </Project>
