--- a/Content/appsettings.Development.json
+++ b/Content/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "DatabaseSettings": {
-    "UseInMemoryDatabase": false
+    "UseInMemoryDatabase": true
   },
   "MongoSettings": {
     "ConnectionString": "mongodb://localhost:27017",
