--- a/Kan/Kan.csproj
+++ b/Kan/Kan.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <PackageReference Include="HtmlAgilityPack" Version="1.11.23" />
+      <PackageReference Include="TheMulti0.TwitterScraper" Version="1.0.4" />
     </ItemGroup>
 
 </Project>
